--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.2",
     "express-prom-bundle": "^6.4.1",
     "express-validator": "^6.14.0",
+    "mongoose": "^6.2.9",
     "prom-client": "^14.0.1"
   },
   "devDependencies": {
